--- a/src/app/gerencia-de-cartoes/gerencia-de-cartoes.page.html
+++ b/src/app/gerencia-de-cartoes/gerencia-de-cartoes.page.html
@@ -1,8 +1,8 @@
 <ion-header class="headerprincipal" [translucent]="true">
   <ion-toolbar>
-    <ion-back-button slot="start" defaultHref="goBackPage()" (click)="goBackPage()"></ion-back-button>
+    <ion-back-button slot="start" defaultHref="#" (click)="goBackPage()"></ion-back-button>
     <ion-title>Cartões</ion-title>
-    <ion-icon slot="end" name="add-outline" class="ion-icon"></ion-icon>
+
   </ion-toolbar>
 </ion-header>
 
@@ -14,4 +14,7 @@
     </ion-toolbar>
   </ion-header>
   <app-card-pagamento-ger-cartao></app-card-pagamento-ger-cartao>
+  
+  
+  
 </ion-content>
