--- a/src/app/components/card-pagamento-ger-cartao/card-pagamento-ger-cartao.component.scss
+++ b/src/app/components/card-pagamento-ger-cartao/card-pagamento-ger-cartao.component.scss
@@ -1,6 +1,3 @@
-*{
-
-}
 .div{
     background: #fff;
     width: 65px;
@@ -21,8 +18,43 @@
     align-items: center;
     padding: 1px;
     border-radius: 40px 10px 10px 40px;  
-    box-shadow:5px 5px 10px 2px;
+    box-shadow:0px 0px 10px 2px #000000;
 }
 .ion-card > ion-card-title{
     padding-left: 10px;
+
 }
+.ion-card-button{
+    margin-top:-15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: none;
+    background:none;
+    height: 100px;
+    width: auto;
+}
+.headerprincipal > ion-toolbar{
+    --background:#ff0000;
+    border-radius: 0px 0px 15px 15px;
+}
+ion-col {
+    color: #fff;
+    text-align: center;
+  }
+ion-fab-button {
+    
+    --width:20px;
+    --background: #fff;
+    --background-activated: #87d361;
+    --background-hover: #a3e681;
+    border-radius: 50%;
+    --box-shadow: 0px 1px 10px 3px #000000;
+    --color: black;
+  }
+
+  ion-button{
+    --background:#ff0000;
+    color:#fff;
+    font-weight: bold;
+  }
