alterações pagina de pagamentos

--- a/src/app/components/status-pagamento/status-pagamento.component.html
+++ b/src/app/components/status-pagamento/status-pagamento.component.html
@@ -1,5 +1,5 @@
 <ion-card class="cardInicial">
-  <ion-card-title>
+  <ion-card-title class="plano">
     Data de Vencimento: 15
   </ion-card-title>
   <ion-card-title class="plano">
