--- a/src/app/components/status-pagamento/status-pagamento.component.scss
+++ b/src/app/components/status-pagamento/status-pagamento.component.scss
@@ -2,11 +2,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: #fff;
     
 }
 .plano > p{
     padding-right: 10px;
+    color: #fff;
 }
 .cardInicial{
     padding: 10px;
+    background-color: #121212;
+    border-style: none;
+    margin-bottom: 50px;
+    
 }
