--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -6,6 +6,7 @@
 
 <ion-content [fullscreen]="true">
   <app-status-pagamento></app-status-pagamento>
+  <app-historico-pagamento></app-historico-pagamento>
 
 
 
