--- a/src/app/components/historico-pagamento/historico-pagamento.component.html
+++ b/src/app/components/historico-pagamento/historico-pagamento.component.html
@@ -1,3 +1,35 @@
-<p>
-  historico-pagamento works!
-</p>
+<ion-card class="first-card">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="2">
+        <ion-card-title class="card-pagamento" >
+          Mês 
+        </ion-card-title>
+      </ion-col>
+      <ion-col  size="7">
+        <ion-card-title class="card-pagamento" >
+          Data de Vencimento
+        </ion-card-title>
+      </ion-col>
+      <ion-col size="3">
+        <ion-card-title class="card-pagamento" *ngIf="statusPagamento">
+          Status
+        </ion-card-title>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-card-title>
+        </ion-card-title>
+      </ion-col>
+      <ion-col>
+        <ion-card-title>
+        </ion-card-title>
+      </ion-col>
+      <ion-col>
+        <ion-card-title>
+        </ion-card-title>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-card>
