--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -9,10 +9,10 @@
     --background: #fff;
   }
 
-ion-content{
-    --background: #0000;
-    --color: white;
-}
+  ion-content{
+    --background: #121212;
+    color:#fff;
+  }
 
 
 ion-item{
