--- a/src/app/components/receitas-gerais/receitas-gerais.component.html
+++ b/src/app/components/receitas-gerais/receitas-gerais.component.html
@@ -1,12 +1,45 @@
 <ion-card *ngFor="let receita of receitas">
   <div class="card-content">
-    <!-- Imagem alinhada à esquerda -->
+    <!-- Imagem e título da receita -->
     <ion-img class="card-image" [src]="receita.strMealThumb"></ion-img>
-
-    <!-- Textos ao lado da imagem -->
     <div class="text-content">
-      <ion-card-title style="display: none;"><b>{{ receita.idMeal }}</b></ion-card-title>
-      <ion-card-title><b>{{ receita.strMeal}}</b></ion-card-title>
+      <ion-card-title><b>{{ receita.strMeal }}</b></ion-card-title>
+      <ion-button (click)="openModal(receita.idMeal)">Ver Info</ion-button>
     </div>
   </div>
 </ion-card>
+
+<!-- Modal para mostrar informações detalhadas da receita -->
+<ion-modal [isOpen]="isModalOpen">
+  <ng-template>
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>{{ selectedReceita?.strMeal || 'Detalhes da Receita' }}</ion-title>
+        <ion-buttons slot="end">
+          <ion-button (click)="closeModal()">Close</ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <div *ngIf="selectedReceita; else loading">
+        <ion-img [src]="selectedReceita.strMealThumb" style="width: 200px;"></ion-img>
+        <h2>{{ selectedReceita.strMeal }}</h2>
+        <p><strong>ID:</strong> {{ selectedReceita.idMeal }}</p>
+        <p><strong>Categoria:</strong> {{ selectedReceita.strCategory }}</p>
+        <p><strong>Área:</strong> {{ selectedReceita.strArea }}</p>
+        <p><strong>Instruções:</strong> {{ selectedReceita.strInstructions }}</p>
+
+        <!-- Lista de ingredientes e medidas -->
+        <h3>Ingredientes</h3>
+        <ul>
+          <li *ngFor="let ingredient of getIngredientes(selectedReceita)">
+            {{ ingredient }}
+          </li>
+        </ul>
+      </div>
+      <ng-template #loading>
+        <p>Carregando dados...</p>
+      </ng-template>
+    </ion-content>
+  </ng-template>
+</ion-modal>
