--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -7,7 +7,9 @@ ion-menu::part(container) {
 
   box-shadow: 4px 0px 16px rgba(0, 0, 0, 0.18);
 }
-
+ion-content{
+  --background: #121212;
+}
 .headerprincipal>ion-toolbar {
   --background: #ff0000;
   border-radius: 0px 0px 15px 15px;
