--- a/src/app/components/historico-pagamento/historico-pagamento.component.html
+++ b/src/app/components/historico-pagamento/historico-pagamento.component.html
@@ -1,35 +1,46 @@
-<ion-card class="first-card">
+<ion-text>
+  <h1>Histórico de pagamento</h1>
+</ion-text>
+
+<ion-card class="first-card" >
   <ion-grid>
     <ion-row>
       <ion-col size="2">
         <ion-card-title class="card-pagamento" >
-          Mês 
+          {{mes}}
         </ion-card-title>
       </ion-col>
       <ion-col  size="7">
         <ion-card-title class="card-pagamento" >
-          Data de Vencimento
+          {{diaVencimento}}
         </ion-card-title>
       </ion-col>
       <ion-col size="3">
-        <ion-card-title class="card-pagamento" *ngIf="statusPagamento">
-          Status
-        </ion-card-title>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-card-title>
-        </ion-card-title>
-      </ion-col>
-      <ion-col>
-        <ion-card-title>
-        </ion-card-title>
-      </ion-col>
-      <ion-col>
-        <ion-card-title>
+        <ion-card-title class="card-pagamento" >
+          {{status}}
         </ion-card-title>
       </ion-col>
     </ion-row>
   </ion-grid>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="2">
+        <ion-card-title class="card-pagamento" >
+          {{mes}}
+        </ion-card-title>
+      </ion-col>
+      <ion-col  size="7">
+        <ion-card-title class="card-pagamento" >
+          {{dataPagamento}}
+        </ion-card-title>
+      </ion-col>
+      <ion-col size="3">
+        <ion-card-title class="card-pagamento" >
+          {{status}}
+        </ion-card-title>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-card>
