--- a/src/app/components/historico-pagamento/historico-pagamento.component.scss
+++ b/src/app/components/historico-pagamento/historico-pagamento.component.scss
@@ -1,11 +1,13 @@
 .first-card{
-    --background: #121212;
-    display: flex;
-    justify-content: center;
-    text-align: center;
+
     align-items: center;
-    margin-top: 10px;
 }
 .card-pagamento{
-    color: #fff;
+    color: #000;
+}
+ion-text >h1{
+    padding-left: 12px;
+}
+ion-grid{
+    background: #fff;
 }
