--- a/src/app/components/receitas-gerais/receitas-gerais.component.html
+++ b/src/app/components/receitas-gerais/receitas-gerais.component.html
@@ -4,7 +4,7 @@
     <ion-img class="card-image" [src]="receita.strMealThumb"></ion-img>
     <div class="text-content">
       <ion-card-title><b>{{ receita.strMeal }}</b></ion-card-title>
-      <ion-button (click)="openModal(receita.idMeal)">Ver Info</ion-button>
+      <ion-button class="verInfoButton" (click)="openModal(receita.idMeal)">Ver Info</ion-button>
     </div>
   </div>
 </ion-card>
