--- a/src/app/components/historico-pagamento/historico-pagamento.component.html
+++ b/src/app/components/historico-pagamento/historico-pagamento.component.html
@@ -7,7 +7,7 @@
     <ion-row>
       <ion-col size="2">
         <ion-card-title class="card-pagamento" >
-          {{mes}}
+          {{mes}} 
         </ion-card-title>
       </ion-col>
       <ion-col  size="7">
@@ -25,19 +25,16 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col size="2">
-        <ion-card-title class="card-pagamento" >
-          {{mes}}
+      <ion-col>
+        <ion-card-title>
         </ion-card-title>
       </ion-col>
-      <ion-col  size="7">
-        <ion-card-title class="card-pagamento" >
-          {{dataPagamento}}
+      <ion-col>
+        <ion-card-title>
         </ion-card-title>
       </ion-col>
-      <ion-col size="3">
-        <ion-card-title class="card-pagamento" >
-          {{status}}
+      <ion-col>
+        <ion-card-title>
         </ion-card-title>
       </ion-col>
     </ion-row>
