Revert "conexao com firebase e tentativa de envio de dados"
This reverts commit 80c653c7d17e2b90fd7b6b193952559b62b44d9e.

--- a/src/app/submit/submit.page.html
+++ b/src/app/submit/submit.page.html
@@ -18,7 +18,7 @@
       </ion-input>
       <ion-input label="Senha" label-placement="floating" fill="solid" [(ngModel)]="senha" placeholder="Digite sua senha" class="custom">
       </ion-input>
-      <ion-button class="botaoacessar" expand="block" size="default" (click)="cadastroUsuario()" >Cadastrar</ion-button>
+      <ion-button class="botaoacessar" expand="block" size="default" (click)="enviarcadastro()" >Cadastrar</ion-button>
       <ion-toolbar class="opcao">
         <ion-text>ou</ion-text>
       </ion-toolbar>
