--- a/src/app/submit/submit.page.html
+++ b/src/app/submit/submit.page.html
@@ -10,7 +10,7 @@
 
   
   <ion-list lines="none" style="background:none;">
-    <form [formGroup]="usuarioForm">
+    <form >
       <ion-input label="Nome Completo" label-placement="floating" formControlName="nome" fill="solid" placeholder="Digite seu nome completo" class="custom">
       </ion-input>
       <ion-input type= "number" label="Celular" label-placement="floating" formControlName="Cel" fill="solid" placeholder="(XX)XXXXX-XXXX" class="custom">
