--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -17,7 +17,7 @@
   </ion-header>
 
   <ion-content class="ion-padding itensmenu">
-    <ion-list>
+    <ion-list class="ion-list-menu">
       <div class="itemimgperfil" >
         <ion-grid [fixed]="true">
           <ion-row>
