--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,7 +6,7 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-content-menu">
   <ion-item>
     <ion-select color="white"  [(ngModel)]="selectedOption" (ionChange)="onOptionChange()">
       <ion-select-option value="serieA">Série A</ion-select-option>
