--- a/src/app/avaliacoes-fisica/avaliacoes-fisica.page.html
+++ b/src/app/avaliacoes-fisica/avaliacoes-fisica.page.html
@@ -5,7 +5,95 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  
-  
+<ion-content class="ion-padding">
+  <form (ngSubmit)="submitForm()" #form="ngForm">
+    <!-- Dados Pessoais -->
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Dados Pessoais</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-item>
+          <ion-label position="stacked">Nome Completo</ion-label>
+          <ion-input type="text" placeholder="Digite seu nome" required [(ngModel)]="formData.name" name="name"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Idade</ion-label>
+          <ion-input type="number" placeholder="Digite sua idade" required [(ngModel)]="formData.age" name="age"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Gênero</ion-label>
+          <ion-select placeholder="Selecione" [(ngModel)]="formData.gender" name="gender" required>
+            <ion-select-option value="male">Masculino</ion-select-option>
+            <ion-select-option value="female">Feminino</ion-select-option>
+            <ion-select-option value="other">Outro</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-card-content>
+    </ion-card>
+
+    <!-- Medidas Corporais -->
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Medidas Corporais</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-item>
+          <ion-label position="stacked">Altura (cm)</ion-label>
+          <ion-input type="number" placeholder="Digite sua altura" required [(ngModel)]="formData.height" name="height"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Peso (kg)</ion-label>
+          <ion-input type="number" placeholder="Digite seu peso" required [(ngModel)]="formData.weight" name="weight"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Percentual de Gordura (%)</ion-label>
+          <ion-input type="number" placeholder="Digite o percentual" [(ngModel)]="formData.bodyFat" name="bodyFat"></ion-input>
+        </ion-item>
+      </ion-card-content>
+    </ion-card>
+
+    <!-- Medidas Adicionais -->
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Medidas Adicionais</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-item>
+          <ion-label position="stacked">Cintura (cm)</ion-label>
+          <ion-input type="number" placeholder="Digite a medida" [(ngModel)]="formData.waist" name="waist"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Quadril (cm)</ion-label>
+          <ion-input type="number" placeholder="Digite a medida" [(ngModel)]="formData.hip" name="hip"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Peitoral (cm)</ion-label>
+          <ion-input type="number" placeholder="Digite a medida" [(ngModel)]="formData.chest" name="chest"></ion-input>
+        </ion-item>
+      </ion-card-content>
+    </ion-card>
+
+    <!-- Observações -->
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Observações</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-item>
+          <ion-label position="stacked">Comentários</ion-label>
+          <ion-textarea placeholder="Adicione observações" [(ngModel)]="formData.observations" name="observations"></ion-textarea>
+        </ion-item>
+      </ion-card-content>
+    </ion-card>
+
+    <!-- Botão de Envio -->
+    <ion-button expand="block" class="button-submit" type="submit" [disabled]="!form.valid">Salvar Avaliação</ion-button>
+  </form>
 </ion-content>
