--- a/src/app/components/receitas-gerais/receitas-gerais.component.html
+++ b/src/app/components/receitas-gerais/receitas-gerais.component.html
@@ -20,9 +20,11 @@
         </ion-buttons>
       </ion-toolbar>
     </ion-header>
-    <ion-content class="ion-padding">
+    <ion-content class="ion-padding content">
       <div *ngIf="selectedReceita; else loading">
-        <ion-img [src]="selectedReceita.strMealThumb" style="width: 200px;"></ion-img>
+        <div class="div-img">
+        <ion-img class="ion-img-receita" [src]="selectedReceita.strMealThumb" style="width: 200px"></ion-img>
+        </div>
         <h2>{{ selectedReceita.strMeal }}</h2>
         <p><strong>ID:</strong> {{ selectedReceita.idMeal }}</p>
         <p><strong>Categoria:</strong> {{ selectedReceita.strCategory }}</p>
