--- a/src/app/components/status-pagamento/status-pagamento.component.html
+++ b/src/app/components/status-pagamento/status-pagamento.component.html
@@ -4,6 +4,42 @@
   </ion-card-title>
   <ion-card-title class="plano">
     Plano: Mensal
-    <p routerLink=""><u>Alterar</u></p>
+    <ion-button class="button-alterar" expand="block" (click)="setOpen(true)">Alterar</ion-button>
+    <ion-content class="ion-padding">
+      <ion-modal [isOpen]="isModalOpen">
+        <ng-template>
+          <ion-header class="ion-header">
+            <ion-toolbar>
+              <ion-title>Planos</ion-title>
+              <ion-buttons slot="end">
+                <ion-button (click)="setOpen(false)">Close</ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ion-header>
+          <ion-content class="ion-padding content">
+            <ion-grid>
+              <ion-row>
+                <ion-col>
+                  Teste
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col>
+                  Teste
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col>
+                  Teste
+                </ion-col>
+              </ion-row>
+
+            </ion-grid>
+            
+          </ion-content>
+        </ng-template>
+      </ion-modal>
+    </ion-content>
   </ion-card-title>
+  
 </ion-card>
