--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -61,6 +61,9 @@ ion-item.active {
 }
 
 /*ESTILIZAÇÃO DO MENU*/
+.ion-list-menu {
+  background: #131313;
+}
 .headermenuopentoolbar {
   --background: #ff0000;
 }
