--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -13,6 +13,11 @@
     --background: #121212;
     color:#fff;
   }
+  .ion-content-menu > ion-item{
+    width: 35%;
+    --background: #000000;
+    color: #000000;
+  }
 
 
 ion-item{
