--- a/src/app/submit/submit.page.html
+++ b/src/app/submit/submit.page.html
@@ -13,11 +13,15 @@
     <form >
       <ion-input label="Nome Completo" label-placement="floating" formControlName="nome" fill="solid" placeholder="Digite seu nome completo" class="custom">
       </ion-input>
+      <ion-input label="CPF" label-placement="floating" formControlName="cpf" fill="solid" placeholder="Digite seu CPF" class="custom">
+      </ion-input>
+      <ion-input label="Data de Nascimento" label-placement="floating" formControlName="dtnascimento" fill="solid" placeholder="Digite sua data de nascimento" class="custom">
+      </ion-input>
       <ion-input type= "number" label="Celular" label-placement="floating" formControlName="Cel" fill="solid" placeholder="(XX)XXXXX-XXXX" class="custom">
       </ion-input>
       <ion-input label="E-mail" label-placement="floating" formControlName="email" fill="solid" placeholder="Digite seu e-mail" class="custom">
       </ion-input>
-      <ion-input label="Senha" label-placement="floating" fill="solid" formControlName="senha" placeholder="Digite sua senha" class="custom">
+      <ion-input type="password" label="Senha" label-placement="floating" fill="solid" formControlName="senha" placeholder="Digite sua senha" class="custom">
       </ion-input>
       <ion-button class="botaoacessar" expand="block" size="default" (click)="cadastroUsuario()" >Cadastrar</ion-button>
       <ion-toolbar class="opcao">
