Atualizações de cores de títulos de página

--- a/src/app/avaliacoes-fisica/avaliacoes-fisica.page.html
+++ b/src/app/avaliacoes-fisica/avaliacoes-fisica.page.html
@@ -1,7 +1,7 @@
 <ion-header class="headerprincipal" [translucent]="true">
   <ion-toolbar>
     <ion-back-button slot="start" defaultHref="goBackPage()" (click)="goBackPage()"></ion-back-button>
-    <ion-title>Avaliações Física</ion-title>
+    <ion-title class="ion-title">Avaliações Física</ion-title>
   </ion-toolbar>
 </ion-header>
 
