--- a/src/app/components/historico-pagamento/historico-pagamento.component.scss
+++ b/src/app/components/historico-pagamento/historico-pagamento.component.scss
@@ -11,3 +11,11 @@ ion-text >h1{
 ion-grid{
     background: #fff;
 }
+ion-grid > ion-row > ion-col{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.button-pagar{
+    --background:#000000;
+}
