--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 
 <ion-header class="headerprincipal" [translucent]="true">
   <ion-toolbar>
-    <ion-title>
+    <ion-title color="light">
       Treino
     </ion-title>
   </ion-toolbar>
