--- a/src/app/gerencia-de-cartoes/gerencia-de-cartoes.page.scss
+++ b/src/app/gerencia-de-cartoes/gerencia-de-cartoes.page.scss
@@ -6,7 +6,10 @@
 ion-content {
     --background: #121212;
 }
-
+.headerprincipal > ion-toolbar > ion-title {
+    --color:#fff;
+    font-weight: bold;
+}
 ion-toolbar {
     display: flex;
     justify-content: center;
