--- a/src/app/tab4/tab4.page.scss
+++ b/src/app/tab4/tab4.page.scss
@@ -3,6 +3,10 @@
     border-radius: 0px 0px 15px 15px;
 }
 
+.headerprincipal > ion-toolbar > ion-title{
+--color:#fff;
+  font-weight: bold;
+}
 ion-content {
     --background: #121212;
 }
