--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -46,6 +46,11 @@
         <ion-icon color="white" aria-hidden="true" name="card" slot="start"></ion-icon>
         <ion-label>Gerenciar Cartões</ion-label>
       </ion-item>
+      <ion-item href="..//sobre-nos/">
+        
+        <ion-icon color="white" aria-hidden="true" name="code-slash-outline" slot="start"></ion-icon>
+        <ion-label>Sobre Nós</ion-label>
+      </ion-item>
       <ion-item href="../login/">
         <ion-icon color="white" aria-hidden="true" name="exit" slot="start"></ion-icon>
         <ion-label>Sair</ion-label>
@@ -92,21 +97,53 @@
             <ion-col>
               <!--Cada elemento que irá aparecer por card-->
               <ion-card>
-                <ion-card-title>THU</ion-card-title>
+                <ion-icon class="iconcard" name="sunny-outline"></ion-icon>
+                <ion-card-title>QUA</ion-card-title>
+                <ion-card-subtitle>13</ion-card-subtitle>
+              </ion-card>
+            </ion-col>
+            
+            <ion-col>
+              <ion-card>
+                <ion-icon class="iconcard" name="time-outline"></ion-icon>
+                <ion-card-title>Duração</ion-card-title>
+                
+                <ion-card-subtitle>20min</ion-card-subtitle>
+              </ion-card>
+            </ion-col>
+            <ion-col>
+              <ion-card>
+                
+                <ion-chip class="serie" size="small">Peito</ion-chip>
+                <ion-chip class="serie" size="small">Tríceps</ion-chip>
+              </ion-card>
+            </ion-col>
+          </ion-row>
+        </ion-card>
+        <ion-card>
+          <ion-row>
+            <ion-col>
+              <!--Cada elemento que irá aparecer por card-->
+              
+              <ion-card>
+                <ion-icon class="iconcard" name="sunny-outline"></ion-icon>
+                <ion-card-title>TER</ion-card-title>
                 <ion-card-subtitle>12</ion-card-subtitle>
               </ion-card>
             </ion-col>
+            
             <ion-col>
               <ion-card>
-                <ion-card-title>Steps</ion-card-title>
-                <ion-card-subtitle>1.212</ion-card-subtitle>
+                <ion-icon class="iconcard" name="time-outline"></ion-icon>
+                <ion-card-title>Duração</ion-card-title>
+                
+                <ion-card-subtitle>37min</ion-card-subtitle>
               </ion-card>
             </ion-col>
             <ion-col>
-              <ion-card>
-                <ion-card-title>Duration</ion-card-title>
-                
-                <ion-card-subtitle> 1.212</ion-card-subtitle>
+              <ion-card >
+                <ion-chip class="serie" size="small">Quadríceps</ion-chip>
+                <ion-chip class="serie" size="small">Bíceps</ion-chip>
               </ion-card>
             </ion-col>
           </ion-row>
@@ -116,45 +153,22 @@
             <ion-col>
               <!--Cada elemento que irá aparecer por card-->
               <ion-card>
-                <ion-card-title>THU</ion-card-title>
-                <ion-card-subtitle>12</ion-card-subtitle>
+                <ion-icon class="iconcard" name="sunny-outline"></ion-icon>
+                <ion-card-title>SEG</ion-card-title>
+                <ion-card-subtitle>11</ion-card-subtitle>
               </ion-card>
             </ion-col>
             <ion-col>
               <ion-card>
-                <ion-card-title>Steps</ion-card-title>
-                <ion-card-subtitle>1.212</ion-card-subtitle>
+                <ion-icon class="iconcard" name="time-outline"></ion-icon>
+                <ion-card-title>Duração</ion-card-title>
+                <ion-card-subtitle>47min</ion-card-subtitle>
               </ion-card>
             </ion-col>
             <ion-col>
               <ion-card>
-                <ion-card-title>Duration</ion-card-title>
-                
-                <ion-card-subtitle> 1.212</ion-card-subtitle>
-              </ion-card>
-            </ion-col>
-          </ion-row>
-        </ion-card>
-        <ion-card>
-          <ion-row>
-            <ion-col>
-              <!--Cada elemento que irá aparecer por card-->
-              <ion-card>
-                <ion-card-title>THU</ion-card-title>
-                <ion-card-subtitle>12</ion-card-subtitle>
-              </ion-card>
-            </ion-col>
-            <ion-col>
-              <ion-card>
-                <ion-card-title>Steps</ion-card-title>
-                <ion-card-subtitle>1.212</ion-card-subtitle>
-              </ion-card>
-            </ion-col>
-            <ion-col>
-              <ion-card>
-                <ion-card-title>Duration</ion-card-title>
-                
-                <ion-card-subtitle> 1.212</ion-card-subtitle>
+                <ion-chip class="serie" size="small">Bíceps</ion-chip>
+                <ion-chip class="serie" size="small">Costas</ion-chip>
               </ion-card>
             </ion-col>
           </ion-row>
