--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -58,6 +58,7 @@ ion-item.active {
 .titleoffblack {
   color: #fff;
   font-size: 20px;
+  font-weight: bold;
 }
 
 /*ESTILIZAÇÃO DO MENU*/
@@ -134,4 +135,14 @@ ion-card-subtitle {
 
 ion-icon {
   color: #000;
+}
+.serie{
+  width: 80px;
+  height: 30px;
+  font-size: 12px;
+  --background:#000;
+  --color:#fff;
+}
+.iconcard{
+  font-size: 20px;
 }
